fixed banner taking more space than it require on smaller screens issue

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,8 +17,12 @@ body{
 /*<<<🔥 User Side >>> 🔥*/
 
 .custom-carousel{
-  height : 470px!important;
-  width : auto;
+  height : 65vh!important;
+}
+
+.custom-carousel img{
+  height : 100%;
+  object-fit: cover;
 }
 
 .product-img{
